[package]
name = "RustTest"
version = "0.1.0"
authors = ["GramYang <18872253531@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
quote = "1.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
threadpool = "1.7.1"
chrono = "0.4"
log="0.4"
simplelog = "^0.7.6"
regex="1"